--- a/index.html
+++ b/index.html
@@ -8,30 +8,37 @@
 	<meta name="author" content="Matic Jurač" />
 	<meta name="keywords"
 		content="Portfolio MaticJurac Matic Jurac Matic Developer HiringDevelopers Hiring Programmer FERI Computer Science" />
-	<title>Matic Jurac - Developing Your Tommorow</title>
+	<title>Matic Jurac - Personal Website</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 
 <body>
 	<div class="fp_container">
-		<div class="nameheading">Hi, I am Matic Jurač!</div>
+		<div class="nameheading">Hi, I am Matic Jurač! <span class="wave">👋</span></div>
 		<div class="namesubheading">
-			A determined Computer Science student with a strong ambition to make a difference.
-		</div>
+		Software Engineer, Computer Science student, father of a beautiful pup!
+        </div>
 	</div>
 	<div class="about">
 		<div class="portrait">
-			<img src="imgs/profilka.png" alt="A picture of me, Matic." class="me">
+			<img src="imgs/waving.png" alt="A picture of me, Matic." class="me">
 		</div>
 		<div class="about-me">
 			<h2 style="margin-bottom: 1vh;">Who am I?</h2>
 			Hello! I am Matic Jurač, I am a young developer and student, based in
-			Maribor, Slovenia. <br /><br />
-			I am currently studying in the Faculty of Electrical Engineering and Computer Science in the University of
+			Črna na Koroškem, Slovenia. <br /><br />
+			I am currently studying in the Faculty of Electrical Engineering, Computer Science and Information Technology in the University of
 			Maribor as a computer science major.
 		</div>
 	</div>
-	
+    <div class="work">
+        <div class="my-work">
+            <h2 style="margin-bottom: 1vh;">What do I do?</h2>
+            I am a software developer, I program <a href="https://www.ibm.com/products/maximo">Maximo applications</a> for <a href="https://troia.eu/">Troia</a>, where I am currently employed. 
+        </div>
+    </div>
+    <div class="contact">
+        --
+    </div>
 </body>
-
 </html>
