Added contact links and company logo
Added discord, mailto, youtube and github contact links, changed work text and added company logo.

--- a/index.html
+++ b/index.html
@@ -34,11 +34,20 @@
     <div class="work">
         <div class="my-work">
             <h2 style="margin-bottom: 1vh;">What do I do?</h2>
-            I am a software developer, I program <a href="https://www.ibm.com/products/maximo">Maximo applications</a> for <a href="https://troia.eu/">Troia</a>, where I am currently employed. 
+            I am a software developer, I program <a href="https://www.ibm.com/products/maximo">Maximo applications</a> for <a href="https://troia.eu/">Troia</a>, where I will be getting employed, once I finish my education. 
+        </div>
+        <div class="logo">
+        	<img src="imgs/troia-logo.webp">
         </div>
     </div>
     <div class="contact">
-        --
+    	<ul>
+        <li><a href="https://github.com/maticjurac">GitHub</a></li>
+        <li><a href="https://www.youtube.com/@maticjurac">YouTube</a></li>
+        <li><a href="https://discord.gg/TRNJYAxtBj">Discord</a></li>
+        <li><a href="mailto:matic.jurac@gmail.com">mail</a></li>	    		
+    	</ul>
+
     </div>
 </body>
 </html>
