--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
     <div class="contact">
     	<ul>
-        <li><a href="https://github.com/maticjurac">GitHub</a></li>
+        <li><a href="https://github.com/matic-jurac">GitHub</a></li>
         <li><a href="https://www.youtube.com/@maticjurac">YouTube</a></li>
         <li><a href="https://discord.gg/TRNJYAxtBj">Discord</a></li>
-        <li><a href="mailto:matic.jurac@gmail.com">mail</a></li>	    		
+        <li><a href="mailto:info@maticj.de">Mail</a></li>	    		
     	</ul>
 
     </div>
