Major to bachelor

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			Hello! I am Matic Jurač, I am a young developer and student, based in
 			Črna na Koroškem, Slovenia. <br /><br />
 			I am currently studying in the Faculty of Electrical Engineering, Computer Science and Information Technology in the University of
-			Maribor as a computer science major.
+			Maribor as a computer science bachelor.
 		</div>
 	</div>
     <div class="work">
