Added social medias
Added social media links to LinkedIn and Pinterest

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <li><a href="https://github.com/matic-jurac">GitHub</a></li>
         <li><a href="https://www.youtube.com/@maticjurac">YouTube</a></li>
         <li><a href="https://discord.gg/TRNJYAxtBj">Discord</a></li>
-        <li><a href="mailto:info@maticj.de">Mail</a></li>	    		
+		<li><a href="https://www.linkedin.com/in/matic-jurac/">LinkedIn</a></li>
+		<li><a href="https://pinterest.com/maticlovesanimals">Pinterest</a></li>  
+		<li><a href="mailto:info@maticj.de">Mail</a></li>	  		
     	</ul>
 
     </div>
