initial for new site - VERY WIP

--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8" />
-	<link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="author" content="Matic Jurač" />
-	<meta name="keywords"
-		content="Portfolio MaticJurac Matic Jurac Matic Developer HiringDevelopers Hiring Programmer FERI Computer Science" />
-	<title>Matic Jurac - Personal Website</title>
-	<link rel="stylesheet" type="text/css" href="styles/style.css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+	<title>Matic Jurac - homepage</title>
 </head>
-
 <body>
-	<div class="fp_container">
-		<div class="nameheading">Hi, I am Matic Jurač! <span class="wave">👋</span></div>
-		<div class="namesubheading">
-		Software Engineer, Computer Science student, father of a beautiful pup!
-        </div>
-	</div>
-	<div class="about">
-		<div class="portrait">
-			<img src="imgs/waving.png" alt="A picture of me, Matic." class="me">
-		</div>
-		<div class="about-me">
-			<h2 style="margin-bottom: 1vh;">Who am I?</h2>
-			Hello! I am Matic Jurač, I am a young developer and student, based in
-			Črna na Koroškem, Slovenia. <br /><br />
-			I am currently studying in the Faculty of Electrical Engineering, Computer Science and Information Technology in the University of
-			Maribor as a computer science bachelor.
-		</div>
-	</div>
-    <div class="work">
-        <div class="my-work">
-            <h2 style="margin-bottom: 1vh;">What do I do?</h2>
-            I am a software developer, I program <a href="https://www.ibm.com/products/maximo">Maximo applications</a> for <a href="https://troia.eu/">Troia</a>, where I will be getting employed, once I finish my education. 
-        </div>
-        <div class="logo">
-        	<img src="imgs/troia-logo.webp">
-        </div>
+<div class="container dark">
+    <header>
+    <nav>
+        <span>
+            <a href="https://matic-jurac.github.io">matic@tivoli</a>
+        </span>
+    </nav>
+    </header>
+    <div>
+        [matic@tivoli ~]$ infofetch
     </div>
-    <div class="contact">
-    	<ul>
-        <li><a href="https://github.com/matic-jurac">GitHub</a></li>
-        <li><a href="https://www.youtube.com/@maticjurac">YouTube</a></li>
-        <li><a href="https://discord.gg/TRNJYAxtBj">Discord</a></li>
-		<li><a href="https://www.linkedin.com/in/matic-jurac/">LinkedIn</a></li>
-		<li><a href="https://pinterest.com/maticlovesanimals">Pinterest</a></li>  
-		<li><a href="mailto:info@maticj.de">Mail</a></li>	  		
-    	</ul>
+    <div class="row">
+        <div class="col">
+            <pre>
+                
 
+                                                  
+                        -*#*%   %-                
+                 =%@#*%**#%%*#*** *               
+                  #***%%*********#%-              
+              =%*#%*#%#**%********%=#             
+                 **%=.****%***#******             
+                **%%% **%*************@*          
+                 *+*% :*#@*@*%%%*****%            
+                         %* +#:= %%% .            
+                   :  : .@:.. +..%%               
+                        ....  @%                  
+                   ==     .--                     
+               %%  *     =-    :                  
+            **+%%%*#=    @  .   #                 
+           -  :%#%%= %@#::##***##*=               
+             *%*%%.@*@@#%%%%*******#              
+           #. %%% @@%*#*************%             
+           ===% %@%********#%***#%***             
+          :===:@@@*************@%****#            
+        :@.   %@@*************@@*****%            
+       #@@   %%@@**********#**@**#****%           
+       %***#**%%#**##******#*%%#%#*#**#           
+       %*****###***%*********@*****%#**.          
+        %@@@*%*%***%*******#*#*****@**##          
+           ##**%***%*******#%*********%-          
+             .%%**#*#*****###*******:             
+                  =********#***=                  
+
+
+            </pre>
+        </div>
+        <div class="col"></div>
     </div>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
