Added some info

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
             <pre>
 <b><span style="color: #4F3E39">matic</span>@<span style="color: #4F3E39">tivoli</span></b>
 --------------------
+<b><span style="color: #4F3E39">Age</span></b>: 20 
+<b><span style="color: #4F3E39">Location</span></b>: Koroška, Slovenia 
 <b><span style="color: #4F3E39">Education</span></b>: Computer science
-<b><span style="color: #4F3E39">Average</span></b>: 8.26/10 
-<b><span style="color: #4F3E39">Hobbies</span></b>: Art, Linux 
+<b><span style="color: #4F3E39">Level</span></b>: Undergraduate 
+<b><span style="color: #4F3E39">Average grade</span></b>: 8.26/10 
+<b><span style="color: #4F3E39">Hobbies</span></b>: Software, Art, Linux  
 <b><span style="color: #4F3E39">Employment</span></b>: <a style="color:black" href="https://troia.eu">Troia</a>
 </pre>
         </div>
