added pronouns, changed location of hobbies

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <b><span style="color: #4F3E39">matic</span>@<span style="color: #4F3E39">tivoli</span></b>
 --------------------
 <b><span style="color: #4F3E39">Age</span></b>: 20 
+<b><span style="color: #4F3E39">Pronouns</span></b>: He/Him 
 <b><span style="color: #4F3E39">Location</span></b>: Koroška, Slovenia 
 <b><span style="color: #4F3E39">Education</span></b>: Computer science
 <b><span style="color: #4F3E39">Level</span></b>: Undergraduate 
 <b><span style="color: #4F3E39">Average grade</span></b>: 8.26/10 
-<b><span style="color: #4F3E39">Hobbies</span></b>: Software, Art, Linux  
 <b><span style="color: #4F3E39">Employment</span></b>: <a style="color:black" href="https://troia.eu">Troia</a>
 </pre>
         </div>
@@ -54,7 +54,7 @@ DevOps      'IBM Maximo'        Docker      'Microsoft Active Directory'        
 Unity       YOLOv8              Windows     
 
 [matic@tivoli ~]$ ls other-hobbies/
-art        cooking        animals   
+art     cooking     petting-animals     minecraft       software        linux                              
     
 [matic@tivoli ~]$ ls links/
 <a style="color: #4F3E39;" href="https://www.linkedin.com/in/matic-jurac/">LinkedIn/</a>        <a style="color: #4F3E39;" href="https://www.youtube.com/@maticjurac">YouTube/</a>      <a style="color: #4F3E39;" href="https://github.com/matic-jurac">GitHub/</a>        <a style="color: #4F3E39;" href="https://pinterest.com/maticlovesanimals">Pinterest/</a>
