--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <pre>
 
 
-[matic@tivoli ~]$ ls links/
+[matic@tivoli ~]$ ls skills/
 DevOps      'IBM Maximo'        Docker      'Microsoft Active Directory'        Linux        Python         Git
 Unity       YOLOv8              Windows     
 
 [matic@tivoli ~]$ ls other-hobbies/
-art     cooking     petting-animals     minecraft       software        linux                              
+art     cooking     petting-animals     minecraft       software-development                                     
     
 [matic@tivoli ~]$ ls links/
 <a style="color: #4F3E39;" href="https://www.linkedin.com/in/matic-jurac/">LinkedIn/</a>        <a style="color: #4F3E39;" href="https://www.youtube.com/@maticjurac">YouTube/</a>      <a style="color: #4F3E39;" href="https://github.com/matic-jurac">GitHub/</a>        <a style="color: #4F3E39;" href="https://pinterest.com/maticlovesanimals">Pinterest/</a>
